k8s/idrac/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    gethomepage.dev/href: 'https://idrac.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: idrac
    gethomepage.dev/group: Other
    gethomepage.dev/icon: idrac
    gethomepage.dev/name: iDRAC
    gethomepage.dev/siteMonitor: https://idrac-service
    gethomepage.dev/external: 'true'
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: &host idrac.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: https
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
